# builder

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: README.md
.github/workflows/: release-api.yml  release-bot.yml
admin/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
admin/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
admin/src/: app.d.ts  index.html  index.tsx
admin/src/components/: categories.tsx  error.tsx  loading.tsx  names.tsx  warning.tsx
admin/src/pages/: settings.tsx
admin/src/utils/: auth.tsx  classes.tsx  layout.tsx  query.tsx
api/: .dockerignore  .eslintrc.js  Dockerfile  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/lib/: api.stack.test.ts  api.stack.ts
api/src/: app.ts  index.d.ts  main.ts
api/src/middlewares/: auth.middlewares.test.ts  auth.middlewares.ts  discord.middlewares.ts  error.middlewares.test.ts  error.middlewares.ts  (+3 more)
api/test/: env.ts  flushdb.ts
bot/: .env.example  Dockerfile  README.md  pyproject.toml
bot/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
bot/builder/: __init__.py  __main__.py  main.py
bot/builder/utils/: __init__.py  api.py  auth0.py
web/: README.md  extra.d.ts  next.config.js  package-lock.json  package.json  tsconfig.json
web/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
web/components/: protected.tsx
web/pages/: _app.tsx  index.tsx
web/utils/: auth0.ts
(+38 files in other folders)
